--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "heroicons": "^2.2.0",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "react": "19.1.0",
