--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,16 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "google-auth-library": "^10.2.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.0",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
-    "prisma": "^6.13.0"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^6.13.0",
+    "uuid": "^11.1.0"
   }
 }
