--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,11 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "@prisma/client": "^6.13.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -20,8 +13,9 @@
     "express": "^5.1.0",
     "google-auth-library": "^10.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "nodemon": "^3.1.10",
-    "prisma": "^6.13.0"
+    "mongoose": "^8.17.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
