--- a/backend/package.json
+++ b/backend/package.json
@@ -11,18 +11,13 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "express-session": "^1.18.2",
+
     "google-auth-library": "^10.2.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10",
-    "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
-    "nodemon": "^3.1.10"
+    "uid-safe": "^2.1.5"
   },
   "devDependencies": {
     "chai": "^5.2.1",
