--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,9 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "heroicons": "^2.2.0",
+    "is-number": "^7.0.0",
     "lucide-react": "^0.535.0",
-    "next": "15.4.5",
+    "next": "^15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
@@ -24,7 +25,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.9",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19",
@@ -32,7 +32,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
   }
 }
