--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-sweetalert2": "^0.6.0",
     "recharts": "^3.1.0",
+    "sweetalert2": "^11.22.2",
     "world-countries": "^5.1.0"
   },
   "devDependencies": {
