--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,7 +19,13 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/dashboard/banking/components/BankingOverview.jsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/dashboard/banking/components/BankingOverview.jsx"
+  ],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
