--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "framer-motion": "^12.23.12",
     "heroicons": "^2.2.0",
     "is-number": "^7.0.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.535.0",
     "next": "^15.4.5",
     "react": "19.1.0",
