--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,9 @@
     "express": "^5.1.0",
     "google-auth-library": "^10.2.0",
     "helmet": "^8.1.0",
-    "html-pdf-node": "^1.0.8",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
