--- a/backend/package.json
+++ b/backend/package.json
@@ -17,13 +17,13 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "jspdf": "^3.0.1",
     "mongoose": "^8.17.0",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdf-lib": "^1.17.1",
     "uid-safe": "^2.1.5"
   },
   "devDependencies": {
