--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@types/react-select": "^5.0.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "heroicons": "^2.2.0",
@@ -23,6 +24,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "react-sweetalert2": "^0.6.0",
     "recharts": "^3.1.0",
     "sweetalert2": "^11.22.2",
