--- a/client/package.json
+++ b/client/package.json
@@ -13,15 +13,15 @@
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.12",
+    "framer-motion": "^11.0.8",
     "heroicons": "^2.2.0",
     "is-number": "^7.0.0",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.535.0",
     "next": "^15.4.5",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-sweetalert2": "^0.6.0",
     "recharts": "^3.1.0",
