--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -24,13 +24,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/dashboard/banking/components/BankingOverview.jsx"
-  ],
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
+    "src/app/dashboard/banking/components/BankingOverview.jsx",
     "src/app/dashboard/components/header/search/SearchableSelect.jsx",
     "src/app/homepage/components/FeaturesSection.jsx"
   ],
