--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@types/react-select": "^5.0.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.8",
     "heroicons": "^2.2.0",
     "is-number": "^7.0.0",
