--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/react-select": "^5.0.0",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.0.8",
     "heroicons": "^2.2.0",
     "is-number": "^7.0.0",
@@ -28,7 +30,8 @@
     "react-sweetalert2": "^0.6.0",
     "recharts": "^3.1.0",
     "sweetalert2": "^11.22.3",
-    "world-countries": "^5.1.0"
+    "world-countries": "^5.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
