--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "google-auth-library": "^10.2.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
