--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,8 @@
     "react-select": "^5.10.2",
     "react-sweetalert2": "^0.6.0",
     "recharts": "^3.1.2",
-    "sweetalert2": "^11.22.3",
+    "sweetalert2": "^11.22.4",
+    "sweetalert2-react-content": "^5.1.0",
     "world-countries": "^5.1.0",
     "xlsx": "^0.18.5"
   },
