--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@types/react-select": "^5.0.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "es-toolkit": "^1.39.10",
     "file-saver": "^2.0.5",
     "framer-motion": "^11.0.8",
     "heroicons": "^2.2.0",
@@ -42,7 +43,7 @@
     "react-icons": "^5.5.0",
     "react-select": "^5.10.2",
     "react-sweetalert2": "^0.6.0",
-    "recharts": "^3.1.2",
+    "recharts": "^2.15.4",
     "sweetalert2": "^11.22.3",
     "world-countries": "^5.1.0",
     "xlsx": "^0.18.5"
