--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "data-fns": "^1.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
