--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
     "google-auth-library": "^10.2.0",
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
